continued working on porting to 1.21.1 (WIP!)